--- a/requirements.txt
+++ b/requirements.txt
@@ -40,10 +40,16 @@ jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.6
 jupyter-console==6.1.0
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
 jupyter-core==4.6.3
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
 jupytext==1.5.2
 kiwisolver==1.2.0
 libcst==0.3.12
+lxml==4.6.1
 MarkupSafe==1.1.1
 matplotlib==3.3.1
 mistune==0.8.4
@@ -59,6 +65,7 @@ pandas-gbq==0.14.0
 pandocfilters==1.4.2
 parso==0.7.1
 pathspec==0.8.0
+patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.2.0
@@ -93,6 +100,7 @@ seaborn==0.10.1
 Send2Trash==1.5.0
 simple-salesforce==1.10.1
 six==1.15.0
+statsmodels==0.12.0
 terminado==0.8.3
 testpath==0.4.4
 toml==0.10.1
